# mm_causalimpact

./: .gitignore  pyproject.toml
causal/best_matches/: best_matches.py  data.py  options.py  parameters.py
causal/best_matches/market_matching/: market_matching.py  market_splits.py  result.py
scripts/: import_rda_file.py
tests/: test_best_matches.py  test_data.py  test_options.py  test_parameters.py  test_params_option.py
